--- a/navbar.html
+++ b/navbar.html
@@ -35,7 +35,7 @@
         <div>Men</div>
         <div>Women</div>
         <div>Login</div>
-        <div>Signup</div>
+        <div ><a href="signup.html">Signup</a></div>
       </div>
     </div>
   </body>
