--- a/navbar.html
+++ b/navbar.html
@@ -34,7 +34,7 @@
       <div>
         <div>Men</div>
         <div>Women</div>
-        <div>Login</div>
+        <div><a href="login.html">Login</a> </div>
         <div ><a href="signup.html">Signup</a></div>
       </div>
     </div>
