linked mens page

--- a/navbar.html
+++ b/navbar.html
@@ -32,7 +32,7 @@
     <div class="navbar">
       <div>Reebok</div>
       <div>
-        <div>Men</div>
+        <div><a href="mensPage.html">Men</a></div>
         <div>Women</div>
         <div><a href="login.html"></a> Login</div>
         <div ><a href="signup.html">Signup</a></div>
